2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (expand_and_select): Make use of
	Gtk::TreeView::expand_to_path() if available.

2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/miscutils.{cc,h}: New files.  Move Util::prior() and next()
	hitherto, and add Util::gtk_version_at_least() to do a runtime
	version check.
	* src/Makefile.am: Add miscutils.{cc,h}.

	* src/stringutils.h: Move prior() and next() into miscutils.h.
	* src/filebuffer.cc: #include "miscutils.h".
	* src/filetree.cc (expand_and_select): Use the lazy scrolling
	feature if GTK+ >= 2.1.4 is available at runtime.

2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (expand_and_select): Don't pass row_align to
	Gtk::TreeView::scroll_to_row() if compiling for gtkmm 2.2 since
	lazy scrolling has now been implemented.

2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: Enable Bourne shell posix mode if possible, and
	export WARNINGS=all in order to get auto* diagnostic messages.

	* src/Makefile.am: Replace deprecated variables INCLUDES and LIBS
	with regexxer_CPPFLAGS and regexxer_LDADD.

2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/cxx.m4: Get rid of all deprecated autoconf constructs.
	* macros/pcre.m4: ditto.

2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Replace the check for gtkmm >= 2.1.0 with a test
	for Glib::set_application_name().  This should be much safer.

2002-12-15  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (main): Use Glib::set_application_name() if building
	for gtkmm 2.1.

2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): On make distcheck,
	pass --enable-warnings=hardcore to ./configure.

2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (AM_INIT_AUTOMAKE): Require automake >= 1.6 and
	make use of the "check-news" option.

	* Makefile.am (EXTRA_DIST): Get rid of EXTRA_DIST and properly